--- a/app/src/main/res/layout/activity_photo_loading.xml
+++ b/app/src/main/res/layout/activity_photo_loading.xml
@@ -53,7 +53,7 @@
 
     <Button
         android:id="@+id/camera"
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="Prendre une photo"
         android:layout_above="@+id/choice" />
