--- a/app/src/main/res/layout/activity_crop_menu.xml
+++ b/app/src/main/res/layout/activity_crop_menu.xml
@@ -11,48 +11,10 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.emmaveillat.finalproject.CropMenu">
 
-    <Button
-        android:text="Annuler les modifications"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/reset"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
-    <TextView
-        android:text="Hauteur : "
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/facX"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginRight="40dp"
-        android:layout_marginEnd="40dp"
-        android:id="@+id/facY" />
-
-    <Button
-        android:text="Rogner l'image !"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/crop"
-        android:layout_above="@+id/save"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
-    <Button
-        android:text="Sauvegarder mon image"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/save"
-        android:layout_above="@+id/reset"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/facY"
+        android:layout_above="@+id/up"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true">
         <ImageView
@@ -60,49 +22,85 @@
             android:layout_width="fill_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:layout_above="@+id/facY"
+            android:layout_above="@+id/cropbar"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true">
         </ImageView>
     </ScrollView>
 
-    <EditText
+    <ImageButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:inputType="numberDecimal"
-        android:ems="10"
-        android:id="@+id/newHeigh"
-        android:layout_below="@+id/facY"
-        android:layout_alignLeft="@+id/facY"
-        android:layout_alignStart="@+id/facY" />
+        android:id="@+id/reset"
+        app:srcCompat="@android:drawable/ic_menu_delete"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"/>
 
-    <TextView
-        android:text="Longueur"
+    <Button
+        android:text="Up"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/facX"
-        android:layout_above="@+id/newWidth"
+        android:id="@+id/up"
+        android:layout_above="@+id/left"
+        android:layout_centerHorizontal="true" />
+
+    <Button
+        android:text="Left"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/left"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_above="@+id/down" />
 
-    <EditText
+    <Button
+        android:text="Right"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:inputType="numberDecimal"
-        android:ems="10"
-        android:id="@+id/newWidth"
-        android:layout_above="@+id/crop"
-        android:layout_toLeftOf="@+id/facY"
-        android:layout_toStartOf="@+id/facY"
-        android:layout_marginRight="80dp"
-        android:layout_marginEnd="80dp" />
+        android:id="@+id/right"
+        android:layout_alignParentRight="true"
+        android:layout_above="@+id/down" />
 
+    <Button
+        android:text="Down"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/down"
+        android:layout_above="@+id/save"
+        android:layout_centerHorizontal="true"/>
 
     <ImageButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/help_crop"
-        app:srcCompat="@android:drawable/ic_menu_info_details"
-        android:layout_above="@+id/crop"
+        android:id="@+id/crop"
+        app:srcCompat="@android:drawable/ic_menu_crop"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"/>
+
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/save"
+        app:srcCompat="@android:drawable/ic_menu_save"
+        android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:id="@+id/textcrop"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Crop"
+        android:layout_above="@+id/cropbar"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <SeekBar
+        android:id="@+id/cropbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:max="100"
+        android:progress="0"
+        android:layout_above="@+id/up"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 </RelativeLayout>
