--- a/app/src/main/res/layout/activity_rotate_menu.xml
+++ b/app/src/main/res/layout/activity_rotate_menu.xml
@@ -32,7 +32,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/reset"
-        app:srcCompat="@android:drawable/ic_menu_delete"
+        app:srcCompat="@android:drawable/ic_menu_revert"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"/>
