--- a/app/src/main/res/layout/activity_convolution_menu.xml
+++ b/app/src/main/res/layout/activity_convolution_menu.xml
@@ -41,6 +41,16 @@
         android:layout_alignParentStart="true" />
 
     <Button
+        android:text="Cartoon"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/cartoon"
+        android:layout_toEndOf="@+id/save"
+        android:layout_toRightOf="@+id/save"
+        android:layout_alignParentRight="true"
+        android:layout_above="@+id/reset"/>
+
+    <Button
         android:text="Moy"
         android:layout_width="70dp"
         android:layout_height="wrap_content"
@@ -78,7 +88,7 @@
 
     <Button
         android:text="Sauvegarder mon image"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/save"
         android:layout_above="@+id/reset"
