--- a/app/src/main/res/layout/activity_general_menu.xml
+++ b/app/src/main/res/layout/activity_general_menu.xml
@@ -187,6 +187,14 @@
         android:layout_toLeftOf="@id/replace" />
 
     <Button
+        android:text="Finger"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/finger"
+        android:layout_above="@+id/ED"
+        android:layout_toLeftOf="@id/rotate" />
+
+    <Button
         android:text="Déformer l'image"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
